Cherry-pick NBFM noise squelch redesign from upstream (#2264)
Replaces power-based squelch with noise-variance-based squelch engine
featuring open/close thresholds with hysteresis for cleaner audio
transitions. Adds NoiseSquelchView GUI with real-time noise level
display and threshold controls.

Cherry-picked from b2be38b2. DifferentialDemodulator changes excluded
(not present in v0.6.1 base).

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>