@@ -1,6 +1,6 @@
 /*
  * *****************************************************************************
- * Copyright (C) 2014-2024 Dennis Sheirer
+ * Copyright (C) 2014-2025 Dennis Sheirer
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -17,13 +17,16 @@
  * ****************************************************************************
  */
 
-package io.github.dsheirer.gui.power;
+package io.github.dsheirer.gui.channel;
 
 import io.github.dsheirer.controller.channel.Channel;
 import io.github.dsheirer.dsp.filter.channelizer.PolyphaseChannelSource;
-import io.github.dsheirer.dsp.squelch.ISquelchConfiguration;
-import io.github.dsheirer.gui.control.DbPowerMeter;
+import io.github.dsheirer.gui.power.SignalPowerView;
+import io.github.dsheirer.gui.squelch.NoiseSquelchView;
 import io.github.dsheirer.module.ProcessingChain;
+import io.github.dsheirer.module.decode.PrimaryDecoder;
+import io.github.dsheirer.module.decode.am.AMDecoder;
+import io.github.dsheirer.module.decode.nbfm.NBFMDecoder;
 import io.github.dsheirer.playlist.PlaylistManager;
 import io.github.dsheirer.sample.Listener;
 import io.github.dsheirer.sample.complex.ComplexSamplesToNativeBufferModule;
@@ -43,149 +46,84 @@ import java.awt.EventQueue;
 import java.awt.event.ComponentEvent;
 import java.awt.event.ComponentListener;
 import java.awt.event.MouseEvent;
-import java.awt.event.MouseWheelEvent;
 import java.text.DecimalFormat;
 import java.text.NumberFormat;
 import java.util.List;
-import jiconfont.icons.font_awesome.FontAwesome;
-import jiconfont.swing.IconFontSwing;
+import javafx.application.Platform;
+import javafx.embed.swing.JFXPanel;
+import javafx.scene.Scene;
 import net.miginfocom.swing.MigLayout;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import javax.swing.Icon;
 import javax.swing.JButton;
-import javax.swing.JCheckBox;
 import javax.swing.JLabel;
 import javax.swing.JLayeredPane;
 import javax.swing.JPanel;
-import javax.swing.JSeparator;
 import javax.swing.JSpinner;
+import javax.swing.JSplitPane;
 import javax.swing.SpinnerNumberModel;
 import javax.swing.event.MouseInputAdapter;
 
 /**
- * Display for channel power and squelch details
+ * Display for channel FFT and squelch details
  */
-public class ChannelPowerPanel extends JPanel implements Listener<ProcessingChain>
+public class ChannelSpectrumPanel extends JPanel implements Listener<ProcessingChain>
 {
-    private static final Logger mLog = LoggerFactory.getLogger(ChannelPowerPanel.class);
-    private static final DecimalFormat DECIMAL_FORMAT = new DecimalFormat("0.0");
+    private static final Logger mLog = LoggerFactory.getLogger(ChannelSpectrumPanel.class);
     private static final DecimalFormat FREQUENCY_FORMAT = new DecimalFormat("0.00000");
-    private static final String NOT_AVAILABLE = "Not Available";
-    private PlaylistManager mPlaylistManager;
+    private final PlaylistManager mPlaylistManager;
     private ProcessingChain mProcessingChain;
-    private ComplexSamplesToNativeBufferModule mSampleStreamTapModule = new ComplexSamplesToNativeBufferModule();
-    private ComplexDftProcessor mComplexDftProcessor = new ComplexDftProcessor();
-    private DFTResultsConverter mDFTResultsConverter = new ComplexDecibelConverter();
-    private JLayeredPane mLayeredPanel;
+    private final ComplexSamplesToNativeBufferModule mSampleStreamTapModule = new ComplexSamplesToNativeBufferModule();
+    private final ComplexDftProcessor mComplexDftProcessor = new ComplexDftProcessor();
     private SpectrumPanel mSpectrumPanel;
-    private FrequencyOverlayPanel mFrequencyOverlayPanel;
-    private DbPowerMeter mPowerMeter = new DbPowerMeter();
-    private PeakMonitor mPeakMonitor = new PeakMonitor(DbPowerMeter.DEFAULT_MINIMUM_POWER);
-    private SourceEventProcessor mSourceEventProcessor = new SourceEventProcessor();
-    private SpinnerNumberModel mNoiseFloorSpinnerModel;
-    private JSpinner mNoiseFloorSpinner;
-    private JLabel mPowerLabel;
-    private JLabel mPeakLabel;
-    private JLabel mSquelchLabel;
-    private JLabel mSquelchValueLabel;
-    private JLabel mPllFrequencyLabel;
-    private JLabel mPllFrequencyValueLabel;
-    private JButton mSquelchUpButton;
-    private JButton mSquelchDownButton;
-    private JButton mLogIndexesButton;
-    private JCheckBox mSquelchAutoTrackCheckBox;
-    private double mSquelchThreshold;
+    private final FrequencyOverlayPanel mFrequencyOverlayPanel;
+    private final SourceEventProcessor mSourceEventProcessor = new SourceEventProcessor();
+    private final SpinnerNumberModel mNoiseFloorSpinnerModel;
+    private final JLabel mEstimatedCarrierOffsetFrequencyLabel;
+    private final JLabel mEstimatedCarrierOffsetFrequencyValueLabel;
     private boolean mPanelVisible = false;
     private boolean mDftProcessing = false;
+    private final NoiseSquelchView mNoiseSquelchView;
+    private final SignalPowerView mSignalPowerView;
+    private final JFXPanel mNoiseSquelchPanel;
+    private JSplitPane mSplitPane;
 
     /**
      * Constructs an instance.
      */
-    public ChannelPowerPanel(PlaylistManager playlistManager, SettingsManager settingsManager)
+    public ChannelSpectrumPanel(PlaylistManager playlistManager, SettingsManager settingsManager)
     {
         mPlaylistManager = playlistManager;
-
-        setLayout(new MigLayout("", "[][][][grow,fill]", "[grow,fill]"));
-        mPowerMeter.setPeakVisible(true);
-        mPowerMeter.setSquelchThresholdVisible(true);
-        add(mPowerMeter);
-
-        JPanel valuePanel = new JPanel();
-        valuePanel.setLayout(new MigLayout("", "[right][left][][]", ""));
-
-        mPeakLabel = new JLabel("0");
-        mPeakLabel.setToolTipText("Current peak power level in decibels.");
-        valuePanel.add(new JLabel("Peak:"));
-        valuePanel.add(mPeakLabel, "wrap");
-
-        mPowerLabel = new JLabel("0");
-        mPowerLabel.setToolTipText("Current Power level in decibels");
-        valuePanel.add(new JLabel("Power:"));
-        valuePanel.add(mPowerLabel, "wrap");
-
-        mSquelchLabel = new JLabel("Squelch:");
-        mSquelchLabel.setEnabled(false);
-        valuePanel.add(mSquelchLabel);
-        mSquelchValueLabel = new JLabel(NOT_AVAILABLE);
-        mSquelchValueLabel.setToolTipText("Squelch threshold value in decibels");
-        mSquelchValueLabel.setEnabled(false);
-        valuePanel.add(mSquelchValueLabel, "wrap");
-
-        IconFontSwing.register(FontAwesome.getIconFont());
-        Icon iconUp = IconFontSwing.buildIcon(FontAwesome.ANGLE_UP, 12);
-        mSquelchUpButton = new JButton(iconUp);
-        mSquelchUpButton.setToolTipText("Increases the squelch threshold value");
-        mSquelchUpButton.setEnabled(false);
-        mSquelchUpButton.addActionListener(e -> broadcast(SourceEvent.requestSquelchThreshold(null, mSquelchThreshold + 1)));
-        valuePanel.add(mSquelchUpButton);
-
-        Icon iconDown = IconFontSwing.buildIcon(FontAwesome.ANGLE_DOWN, 12);
-        mSquelchDownButton = new JButton(iconDown);
-        mSquelchDownButton.setToolTipText("Decreases the squelch threshold value.");
-        mSquelchDownButton.setEnabled(false);
-        mSquelchDownButton.addActionListener(e -> broadcast(SourceEvent.requestSquelchThreshold(null, mSquelchThreshold - 1)));
-        valuePanel.add(mSquelchDownButton, "wrap");
-
-        mSquelchAutoTrackCheckBox = new JCheckBox("Auto Track");
-        mSquelchAutoTrackCheckBox.setToolTipText("Enable or disable monitoring of the noise floor to auto-adjust the " +
-                "squelch threshold value maintaining a consistent level/buffer above the noise floor");
-        mSquelchAutoTrackCheckBox.setEnabled(false);
-        mSquelchAutoTrackCheckBox.addActionListener(e ->
-        {
-            broadcast(SourceEvent.requestSquelchAutoTrack(mSquelchAutoTrackCheckBox.isSelected()));
-        });
-        valuePanel.add(mSquelchAutoTrackCheckBox, "span,left");
-
-        add(valuePanel);
-        add(new JSeparator(JSeparator.VERTICAL));
+        mNoiseSquelchView = new NoiseSquelchView(mPlaylistManager);
+        mSignalPowerView = new SignalPowerView(mPlaylistManager);
+        setLayout(new MigLayout("insets 0", "[grow,fill]", "[grow,fill]"));
 
         JPanel fftPanel = new JPanel();
         fftPanel.setLayout(new MigLayout("insets 0", "[grow,fill]", "[][grow,fill]"));
 
         JPanel labelPanel = new JPanel();
-        labelPanel.setLayout(new MigLayout("insets 0", "[grow,fill][right][grow,fill][right][grow,fill][]", ""));
+        labelPanel.setLayout(new MigLayout("insets 0", "[grow,fill][right][grow,fill][right][][]", ""));
         labelPanel.add(new JLabel("Channel Spectrum"));
 
-        mPllFrequencyLabel = new JLabel("PLL:");
-        mPllFrequencyLabel.setEnabled(false);
-        labelPanel.add(mPllFrequencyLabel);
-        mPllFrequencyValueLabel = new JLabel("0 Hz");
-        mPllFrequencyValueLabel.setEnabled(false);
-        labelPanel.add(mPllFrequencyValueLabel);
+        mEstimatedCarrierOffsetFrequencyLabel = new JLabel("Carrier Offset:");
+        mEstimatedCarrierOffsetFrequencyLabel.setEnabled(false);
+        labelPanel.add(mEstimatedCarrierOffsetFrequencyLabel);
+        mEstimatedCarrierOffsetFrequencyValueLabel = new JLabel("0 Hz");
+        mEstimatedCarrierOffsetFrequencyValueLabel.setEnabled(false);
+        labelPanel.add(mEstimatedCarrierOffsetFrequencyValueLabel);
 
         mNoiseFloorSpinnerModel = new SpinnerNumberModel(18, 8, 36, 1);
         mNoiseFloorSpinnerModel.addChangeListener(e -> {
             Number number = mNoiseFloorSpinnerModel.getNumber();
             mSpectrumPanel.setSampleSize(number.doubleValue());
         });
-        mNoiseFloorSpinner = new JSpinner(mNoiseFloorSpinnerModel);
-        labelPanel.add(mNoiseFloorSpinner);
+        JSpinner noiseFloorSpinner = new JSpinner(mNoiseFloorSpinnerModel);
+        labelPanel.add(noiseFloorSpinner);
         labelPanel.add(new JLabel("Spectral Display Noise Floor"));
 
-        mLogIndexesButton = new JButton("Log Settings");
-        mLogIndexesButton.addActionListener(e -> {
+        JButton logIndexesButton = new JButton("Log Settings");
+        logIndexesButton.addActionListener(e -> {
             if(mProcessingChain != null)
             {
                 Source source = mProcessingChain.getSource();
@@ -223,12 +161,12 @@ public class ChannelPowerPanel extends JPanel implements Listener<ProcessingChai
                 }
             }
         });
-        labelPanel.add(mLogIndexesButton);
+        //This is a debug button to log the current settings to the app log.
+//        labelPanel.add(mLogIndexesButton);
 
         fftPanel.add(labelPanel, "wrap");
 
         mFrequencyOverlayPanel = new FrequencyOverlayPanel(settingsManager);
-
         mSpectrumPanel = new SpectrumPanel(settingsManager);
         mSpectrumPanel.setSampleSize(18.0);
 
@@ -236,8 +174,8 @@ public class ChannelPowerPanel extends JPanel implements Listener<ProcessingChai
          * The layered pane holds the overlapping spectrum and channel panels
          * and manages the sizing of each panel with the resize listener
          */
-        mLayeredPanel = new JLayeredPane();
-        mLayeredPanel.addComponentListener(new ResizeListener());
+        JLayeredPane layeredPanel = new JLayeredPane();
+        layeredPanel.addComponentListener(new ResizeListener());
 
         /**
          * Create a mouse adapter to handle mouse events over the spectrum
@@ -250,15 +188,29 @@ public class ChannelPowerPanel extends JPanel implements Listener<ProcessingChai
         mFrequencyOverlayPanel.addMouseWheelListener(mouser);
 
         //Add the spectrum and channel panels to the layered panel
-        mLayeredPanel.add(mSpectrumPanel, 0, 0);
-        mLayeredPanel.add(mFrequencyOverlayPanel, 1, 0);
+        layeredPanel.add(mSpectrumPanel, 0, 0);
+        layeredPanel.add(mFrequencyOverlayPanel, 1, 0);
 
-        fftPanel.add(mLayeredPanel);
-        add(fftPanel);
+        fftPanel.add(layeredPanel);
+
+        mNoiseSquelchPanel = new JFXPanel();
+
+        //Spin noise squelch panel construction off onto the JavafX UI thread.
+        Platform.runLater(() -> {
+            Scene scene = new Scene(mNoiseSquelchView);
+            mNoiseSquelchPanel.setScene(scene);
+        });
+
+        mSplitPane = new JSplitPane(JSplitPane.HORIZONTAL_SPLIT);
+        mSplitPane.add(fftPanel, JSplitPane.LEFT);
+        mSplitPane.add(mNoiseSquelchPanel, JSplitPane.RIGHT);
+        mSplitPane.setDividerLocation(0.5);
+        add(mSplitPane);
 
         mSampleStreamTapModule.setListener(mComplexDftProcessor);
-        mComplexDftProcessor.addConverter(mDFTResultsConverter);
-        mDFTResultsConverter.addListener(mSpectrumPanel);
+        DFTResultsConverter DFTResultsConverter = new ComplexDecibelConverter();
+        mComplexDftProcessor.addConverter(DFTResultsConverter);
+        DFTResultsConverter.addListener(mSpectrumPanel);
         mSpectrumPanel.clearSpectrum();
     }
 
@@ -276,6 +228,7 @@ public class ChannelPowerPanel extends JPanel implements Listener<ProcessingChai
     {
         mPanelVisible = visible;
         updateFFTProcessing();
+        mNoiseSquelchView.setShowing(visible);
     }
 
     /**
@@ -322,55 +275,21 @@ public class ChannelPowerPanel extends JPanel implements Listener<ProcessingChai
     }
 
     /**
-     * Updates the decoder's PLL frequency on the swing dispatch thread
-     * @param trackingFrequency that is currently measured.
+     * Updates the CarrierOffsetProcessor's current carrier offset tracking frequency
+     * @param carrierOffsetFrequency that is currently measured/estimated.
      */
-    private void updatePllFrequency(long trackingFrequency)
+    private void updateEstimatedCarrierOffsetFrequency(long carrierOffsetFrequency)
     {
         //Note: we flip the sign on the error measurement because the value represents the amount of offset the PLL
         //has to apply to move the signal to center/baseband
         EventQueue.invokeLater(() -> {
-            String formattedValue = NumberFormat.getInstance().format(-trackingFrequency);
-            mPllFrequencyValueLabel.setText(formattedValue + " Hz");
-            mPllFrequencyValueLabel.setEnabled(true);
-            mPllFrequencyLabel.setEnabled(true);
+            String formattedValue = NumberFormat.getInstance().format(carrierOffsetFrequency);
+            mEstimatedCarrierOffsetFrequencyValueLabel.setText(formattedValue + " Hz");
+            mEstimatedCarrierOffsetFrequencyValueLabel.setEnabled(true);
+            mEstimatedCarrierOffsetFrequencyLabel.setEnabled(true);
         });
 
-        mFrequencyOverlayPanel.setPllTrackingFrequency(trackingFrequency);
-    }
-
-    /**
-     * Updates the channel's decode configuration with a new squelch threshold value
-     */
-    private void setConfigSquelchThreshold(int threshold)
-    {
-        if(mProcessingChain != null)
-        {
-            Channel channel = mPlaylistManager.getChannelProcessingManager().getChannel(mProcessingChain);
-
-            if(channel != null && channel.getDecodeConfiguration() instanceof ISquelchConfiguration)
-            {
-                ISquelchConfiguration configuration = (ISquelchConfiguration)channel.getDecodeConfiguration();
-                configuration.setSquelchThreshold(threshold);
-                mPlaylistManager.schedulePlaylistSave();
-            }
-        }
-    }
-
-    /**
-     * Updates the channel configuration squelch auto-track feature setting.
-     * @param autoTrack true to enable.
-     */
-    private void setConfigSquelchAutoTrack(boolean autoTrack)
-    {
-        Channel channel = mPlaylistManager.getChannelProcessingManager().getChannel(mProcessingChain);
-
-        if(channel != null && channel.getDecodeConfiguration() instanceof ISquelchConfiguration)
-        {
-            ISquelchConfiguration configuration = (ISquelchConfiguration)channel.getDecodeConfiguration();
-            configuration.setSquelchAutoTrack(autoTrack);
-            mPlaylistManager.schedulePlaylistSave();
-        }
+        mFrequencyOverlayPanel.setEstimatedCarrierOffsetFrequency(carrierOffsetFrequency);
     }
 
     private void broadcast(SourceEvent sourceEvent)
@@ -387,26 +306,13 @@ public class ChannelPowerPanel extends JPanel implements Listener<ProcessingChai
      */
     private void reset()
     {
-        mPeakMonitor.reset();
-        mPowerMeter.reset();
-
-        mPeakLabel.setText("0");
-        mPowerLabel.setText("0");
-        mPllFrequencyLabel.setEnabled(false);
-        mPllFrequencyValueLabel.setText("0 Hz");
-        mPllFrequencyValueLabel.setEnabled(false);
+        mEstimatedCarrierOffsetFrequencyLabel.setEnabled(false);
+        mEstimatedCarrierOffsetFrequencyValueLabel.setText("0 Hz");
+        mEstimatedCarrierOffsetFrequencyValueLabel.setEnabled(false);
         mFrequencyOverlayPanel.process(SourceEvent.frequencyChange(null, 0));
         mFrequencyOverlayPanel.process(SourceEvent.sampleRateChange(0));
-        mFrequencyOverlayPanel.setPllTrackingFrequency(0);
+        mFrequencyOverlayPanel.setEstimatedCarrierOffsetFrequency(0);
         mFrequencyOverlayPanel.setChannelBandwidth(0);
-
-        mSquelchLabel.setEnabled(false);
-        mSquelchValueLabel.setText("Not Available");
-        mSquelchValueLabel.setEnabled(false);
-        mSquelchUpButton.setEnabled(false);
-        mSquelchDownButton.setEnabled(false);
-        mSquelchAutoTrackCheckBox.setEnabled(false);
-        mSquelchAutoTrackCheckBox.setSelected(false);
     }
 
     /**
@@ -418,6 +324,7 @@ public class ChannelPowerPanel extends JPanel implements Listener<ProcessingChai
         //Disconnect the FFT panel
         if(mProcessingChain != null)
         {
+            mNoiseSquelchView.setController(null);
             mProcessingChain.removeSourceEventListener(mSourceEventProcessor);
             mProcessingChain.removeModule(mSampleStreamTapModule);
         }
@@ -430,8 +337,41 @@ public class ChannelPowerPanel extends JPanel implements Listener<ProcessingChai
         if(mProcessingChain != null)
         {
             mProcessingChain.addSourceEventListener(mSourceEventProcessor);
-            mProcessingChain.addModule(mSampleStreamTapModule);
 
+            PrimaryDecoder primaryDecoder = mProcessingChain.getPrimaryDecoder();
+            if(primaryDecoder instanceof NBFMDecoder nbfmDecoder)
+            {
+                Component rightComponent = mSplitPane.getRightComponent();
+
+                if(rightComponent != mNoiseSquelchPanel)
+                {
+                    mSplitPane.remove(rightComponent);
+                    mSplitPane.setRightComponent(mNoiseSquelchPanel);
+                }
+
+                mNoiseSquelchView.setController(nbfmDecoder);
+                mSignalPowerView.setProcessingChain(null);
+            }
+            else if(primaryDecoder instanceof AMDecoder)
+            {
+                Component rightComponent = mSplitPane.getRightComponent();
+
+                if(rightComponent != mSignalPowerView)
+                {
+                    mSplitPane.remove(rightComponent);
+                    mSplitPane.setRightComponent(mSignalPowerView);
+                }
+
+                mNoiseSquelchView.setController(null);
+                mSignalPowerView.setProcessingChain(mProcessingChain);
+            }
+            else
+            {
+                mNoiseSquelchView.setController(null);
+                mSignalPowerView.setProcessingChain(null);
+            }
+
+            mProcessingChain.addModule(mSampleStreamTapModule);
             Source source = mProcessingChain.getSource();
 
             if(source instanceof TunerChannelSource tcs)
@@ -448,15 +388,17 @@ public class ChannelPowerPanel extends JPanel implements Listener<ProcessingChai
 
                 if(!tunerChannels.isEmpty())
                 {
-                    mFrequencyOverlayPanel.setChannelBandwidth(tunerChannels.get(0).getBandwidth());
+                    mFrequencyOverlayPanel.setChannelBandwidth(tunerChannels.getFirst().getBandwidth());
                 }
             }
         }
+        else
+        {
+            mNoiseSquelchView.setController(null);
+            mSignalPowerView.setProcessingChain(null);
+        }
 
         updateFFTProcessing();
-
-        broadcast(SourceEvent.requestCurrentSquelchAutoTrack());
-        broadcast(SourceEvent.requestCurrentSquelchThreshold());
     }
 
 
@@ -468,59 +410,12 @@ public class ChannelPowerPanel extends JPanel implements Listener<ProcessingChai
         @Override
         public void receive(SourceEvent sourceEvent)
         {
-            switch(sourceEvent.getEvent())
+            if(sourceEvent.getEvent() == SourceEvent.Event.NOTIFICATION_CARRIER_OFFSET_FREQUENCY)
             {
-                case NOTIFICATION_CHANNEL_POWER ->
-                    {
-                        final double power = sourceEvent.getValue().doubleValue();
-                        final double peak = mPeakMonitor.process(power);
-
-                        EventQueue.invokeLater(() -> {
-                            mPowerMeter.setPower(power);
-                            mPowerLabel.setText(DECIMAL_FORMAT.format(power));
-
-                            mPowerMeter.setPeak(peak);
-                            mPeakLabel.setText(DECIMAL_FORMAT.format(peak));
-                        });
-
-                    }
-                case NOTIFICATION_SQUELCH_THRESHOLD ->
-                        {
-                            final double threshold = sourceEvent.getValue().doubleValue();
-                            mSquelchThreshold = threshold;
-                            setConfigSquelchThreshold((int)threshold);
-
-                            EventQueue.invokeLater(new Runnable()
-                            {
-                                @Override
-                                public void run()
-                                {
-                                    mPowerMeter.setSquelchThreshold(threshold);
-                                    mSquelchLabel.setEnabled(true);
-                                    mSquelchValueLabel.setEnabled(true);
-                                    mSquelchValueLabel.setText(DECIMAL_FORMAT.format(threshold));
-                                    mSquelchDownButton.setEnabled(true);
-                                    mSquelchUpButton.setEnabled(true);
-                                }
-                            });
-                        }
-                case NOTIFICATION_PLL_FREQUENCY ->
-                {
-                    if(sourceEvent.hasValue())
-                    {
-                        updatePllFrequency(sourceEvent.getValue().longValue());
-                    }
-                }
-                case NOTIFICATION_SQUELCH_AUTO_TRACK ->
-                {
-                    boolean autoTrack = sourceEvent.getValue().intValue() == 1 ? true : false;
-                    setConfigSquelchAutoTrack(autoTrack);
-                    EventQueue.invokeLater(() -> {
-                        mSquelchAutoTrackCheckBox.setSelected(autoTrack);
-                        mSquelchAutoTrackCheckBox.setEnabled(true);
-                    });
-                }
+                updateEstimatedCarrierOffsetFrequency(sourceEvent.getValue().longValue());
             }
+
+            mSignalPowerView.receive(sourceEvent);
         }
     }
 
@@ -548,18 +443,10 @@ public class ChannelPowerPanel extends JPanel implements Listener<ProcessingChai
      */
     public class MouseEventProcessor extends MouseInputAdapter
     {
-        public MouseEventProcessor()
-        {
-        }
-
-        @Override public void mouseWheelMoved(MouseWheelEvent e) {}
         @Override public void mouseMoved(MouseEvent event)
         {
             update(event);
         }
-        @Override public void mouseDragged(MouseEvent event) {}
-        @Override public void mousePressed(MouseEvent e) {}
-        @Override public void mouseClicked(MouseEvent event) {}
 
         /**
          * Updates the cursor display while the mouse is performing actions
